welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:72: error: Unmatched closing brace '}' ignored here
}
^